style.css
:root {
    --primary-color: #fd951f;
    --bg-color: #130f0d;
    --text-color: #f0f0f5;
    --light-color: rgba(255, 255, 255, 0.04);
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html {
    font-family: Roboto, sans-serif;
}

body {
    height: 100vh;

    display: flex;
    flex-direction: column;
    /* justify-content: center; */
    /* align-items: center; */

    color: var(--text-color);

    background-color: var(--bg-color);
}

form {
    background-color: var(--light-color);

    width: 100%;
    max-width: 450px;

    margin: auto;
    padding: 32px 48px;
    border-radius: 8px;

    display: flex;
    flex-direction: column;
}

form h2 {
    margin: 15px 0;
    text-align: center;
}

.input-container {
    margin-bottom: 15px;

    position: relative;
}

input,
button {
    appearance: none;
    -moz-appearance: none;
    -webkit-appearance: none;

    width: 100%;

    border: none;
    border-bottom: 1px solid var(--primary-color);

    background-color: transparent;
    outline: none;

    color: var(--text-color);
    font-size: 1em;
}

input {
    padding: 18px 8px 7px;
}

button {
    margin-top: 16px;
    border-radius: 3px;
    padding: 15px;

    font-weight: 600;

    background-color: var(--primary-color);
}

input ~ label {
    position: absolute;
    top: 13px;
    left: 2px;

    color: rgba(255, 255, 255, 0.7);

    transition: .4s;
}

input:focus ~ label,
input:valid ~ label {
    transform: translateY(-20px);
    font-size: 0.8em;
    letter-spacing: 0.1em;
}

.input-container span.error {
    margin-top: 10px;

    display: flex;
    background-color: rgba(255, 0, 0, 0.2);
}

.input-container span.error.active {
    border: 1px solid red;
    padding: .4em;
}

